--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Temtem IT",
-  "name": "Temtem Italia Website",
+  "short_name": "FraWolf",
+  "name": "FraWolf / Bots",
   "icons": [
     {
       "src": "favicon.ico",
